tests/expectations/compiler/array/array_variable_access_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ECMP0376009]: This array index could not be determined at compile time.
    --> compiler-test:5:18
     |
   5 |         return a[index];
     |                  ^^^^^"""]
